Change api format, add parameters config and training data (#23)
*  Add get_params request
*  Refactor sample size in training data
* Add training_data in response
* Remove parameters from response
