# app.py
@@ -1,5 +1,6 @@
 import json
 import sys
+from typing import List
 
 import git
 from celery import Celery
@@ -15,7 +16,7 @@ from conf import MONGO_URL, MONGO_PORT, MONGO_USER, MONGO_PASS, MONGO_AUTH_DB, D
 from data_management import S3Manager, update_record, \
     get_mongo_client, valid_embedding_model
 from data_management import get_record
-from ml_transformers.utils import AVAILABLE_TRANSFORMERS
+from ml_transformers.utils import AVAILABLE_TRANSFORMERS, DEFAULT_PROJECTION_PARAMETERS
 
 with open("version") as f:
     VERSION = f.read().strip()
@@ -27,9 +28,10 @@ with open("version") as f:
         "pythonVersion": sys.version
     }
 
-with open('./hydro-vis-request-json-schema.json') as f:
+
+with open('./hydro-vis-params-json-schema.json') as f:
     REQUEST_JSON_SCHEMA = json.load(f)
-    validator = Draft7Validator(REQUEST_JSON_SCHEMA)
+    params_validator = Draft7Validator(REQUEST_JSON_SCHEMA)
 
 mongo_client = get_mongo_client(MONGO_URL, MONGO_PORT, MONGO_USER, MONGO_PASS, MONGO_AUTH_DB)
 
@@ -90,20 +92,20 @@ def transform(method: str):
     :param method: umap /trimap /tsne
             request body: see README
             response body: see README
+    :param modelVersionId: int
     :return: task_id if not found
     """
+    if 'model_version_id' not in set(request.args.keys()):
+        return jsonify(
+            {"message": f"Expected args: 'model_version_id'. Provided args: {set(request.args.keys())}"}), 400
+    model_version_id = int(request.args.get('model_version_id'))
+
     if method not in AVAILABLE_TRANSFORMERS:
         return jsonify(
             {"message": f"Transformer method {method} is  not implemented."}), 400
 
-    request_json = request.get_json()
-    if not validator.is_valid(request_json):
-        error_message = "\n".join([error.message for error in validator.iter_errors(request_json)])
-        return jsonify({"message": error_message}), 400
-
-    logging.info(f'Received request: {request_json}')
-
-    result = transformation_tasks.tasks.transform_task.apply_async(args=(method, request_json), queue="visualization")
+    result = transformation_tasks.tasks.transform_task.apply_async(args=(method, model_version_id),
+                                                                   queue="visualization")
 
     return jsonify({
         'task_id': result.task_id}), 202
@@ -116,30 +118,34 @@ def refit_model(method):
     :params model_id: model id int
     :return: job_id
     """
+    if 'model_version_id' not in set(request.args.keys()):
+        return jsonify(
+            {"message": f"Expected args: 'model_version_id'. Provided args: {set(request.args.keys())}"}), 400
+
+    model_version_id = int(request.args.get('model_version_id'))
     refit_transformer = request.args.get('refit_transformer', True)
 
     if method not in AVAILABLE_TRANSFORMERS:
         return jsonify(
             {"message": f"Transformer method {method} is  not implemented."}), 400
 
-    request_json = request.get_json()
-    if not validator.is_valid(request_json):
-        error_message = "\n".join([error.message for error in validator.iter_errors(request_json)])
-        return jsonify({"message": error_message}), 400
-    model_name = request_json.get('model_name')
-    model_version = str(request_json.get('model_version'))
-    db_model_info = get_record(db, method, model_name, model_version)
+    db_model_info = get_record(db, method, model_version_id)
     db_model_info['result_file'] = ''  # forget about old results
     if refit_transformer:
         db_model_info['transformer_file'] = ''
-    update_record(db, method, db_model_info, model_name, model_version)
-    result = transformation_tasks.tasks.transform_task.apply_async(args=(method, request_json), queue="visualization")
+    update_record(db, method, db_model_info, model_version_id)
+    result = transformation_tasks.tasks.transform_task.apply_async(args=(method, model_version_id),
+                                                                   queue="visualization")
     return jsonify({
         'task_id': result.task_id}), 202
 
 
 @app.route(PREFIX + '/supported', methods=['GET'])
 def supported():
+    if 'model_version_id' not in set(request.args.keys()):
+        return jsonify(
+            {"message": f"Expected args: 'model_version_id'. Provided args: {set(request.args.keys())}"}), 400
+
     model_version_id = request.args.get('model_version_id')
     try:
         logging.info(f'Connecting to cluster')
@@ -156,6 +162,7 @@ def supported():
         return {"supported": False, "message": f"No '{EMBEDDING_FIELD}' field in model output fields"}, 200
 
 
+
 @app.route(PREFIX + '/params/<method>', methods=['POST'])
 def set_params(method):
     """
@@ -164,19 +171,47 @@ def set_params(method):
         request body: see README
     :return: 200
     """
+    if 'model_version_id' not in set(request.args.keys()):
+        return jsonify(
+            {"message": f"Expected args: 'model_version_id'. Provided args: {set(request.args.keys())}"}), 400
+
+    model_version_id = int(request.args.get('model_version_id'))
     logging.info("Received set params request")
     request_json = request.get_json()
-    model_name = request_json['model_name']
-    model_version = request_json['model_version']
-    parameters = request_json['parameters']
-    use_labels = request_json.get('use_label', False)
-    record = get_record(db, method, model_name, model_version)
-    record['parameters'] = parameters
-    record['use_labels'] = use_labels
+
+    if not params_validator.is_valid(request_json):
+        error_message = "\n".join([error.message for error in params_validator.iter_errors(request_json)])
+        return jsonify({"message": error_message}), 400
+
+    record = get_record(db, method, model_version_id)
+    record['parameters'] = request_json['parameters']
+    record['visualization_metrics']: List[str] = request_json.get('visualization_metrics',
+                                                                  DEFAULT_PROJECTION_PARAMETERS[
+                                                                      'visualization_metrics'])
+    record['training_data_sample_size'] = request_json.get('training_data_sample_size',
+                                                           DEFAULT_PROJECTION_PARAMETERS['training_data_sample_size'])
+    record['production_data_sample_size'] = request_json.get('training_data_sample_size',
+                                                             DEFAULT_PROJECTION_PARAMETERS[
+                                                                 'production_data_sample_size'])
     record['result_file'] = ''
     record['transformer_file'] = ''
-    update_record(db, method, record, model_name, model_version)
+
+    update_record(db, method, record, model_version_id)
     return jsonify({}), 200
+
+
+@app.route(PREFIX + '/params/<method>', methods=['GET'])
+def get_params(method):
+    if 'model_version_id' not in set(request.args.keys()):
+        return jsonify(
+            {"message": f"Expected args: 'model_version_id'. Provided args: {set(request.args.keys())}"}), 400
+    # TODO return 400 if such model does not exist
+    model_version_id = int(request.args.get('model_version_id'))
+    record = get_record(db, method, str(model_version_id))
+    result = {k: v for k, v in record.items() if k in ['parameters', 'visualization_metrics',
+                                                       'production_data_sample_size', 'training_data_sample_size']}
+
+    return jsonify(result), 200
 
 
 @app.route(PREFIX + '/jobs', methods=['GET'])
@@ -186,6 +221,9 @@ def model_status():
     :param task_id:
     :return:
     """
+    if 'task_id' not in set(request.args.keys()):
+        return jsonify(
+            {"message": f"Expected args: 'task_id'. Provided args: {set(request.args.keys())}"}), 400
     task_id = request.args.get('task_id')
     task = transformation_tasks.tasks.transform_task.AsyncResult(task_id)
     response = {
@@ -211,9 +249,6 @@ def model_status():
         code = info['code']
 
     return jsonify(response), code
-
-
-
 
 
 if __name__ == "__main__":
